--- a/index.html
+++ b/index.html
@@ -90,35 +90,35 @@
       <div class="content_container page_grid features">
         <div class="feature_item category1">
           <button>
-            <a href="FAQ.html">
+            <a href="faq.html">
               <h3>Bonsai tree care</h3>
             </a>
           </button>
         </div>
         <div class="feature_item category2">
           <button>
-            <a href="FAQ.html">
+            <a href="faq.html">
               <h3>Growing/cultivating</h3>
             </a>
           </button>
         </div>
         <div class="feature_item category3">
           <button>
-            <a href="FAQ.html">
+            <a href="faq.html">
               <h3>Styling</h3>
             </a>
           </button>
         </div>
         <div class="feature_item category4">
           <button>
-            <a href="FAQ.html">
+            <a href="faq.html">
               <h3>Popular tree species</h3>
             </a>
           </button>
         </div>
         <div class="feature_item category5">
           <button>
-            <a href="FAQ.html">
+            <a href="faq.html">
               <h3>Bonsai for beginner</h3>
             </a>
           </button>
@@ -143,7 +143,7 @@
           <hr>
           <p class="content">Enjoy the beauty of Bonsai through our gallery!</p>
           <button class="content_information">
-            <a href="Gallery.html">Gallery</a>
+            <a href="gallery.html">Gallery</a>
           </button>
         </div>
         <div class="content_item">
@@ -151,7 +151,7 @@
           <hr>
           <p class="content">Want to know more about bonsai? Contact us for more information!</p>
           <button class="content_information">
-            <a href="contactus.html">Contact</a>
+            <a href="contact.html">Contact</a>
           </button>
         </div>
       </div>
